--- a/inst/scripts/resources/multi_config_workflow/config_similarity_measures/config.yaml
+++ b/inst/scripts/resources/multi_config_workflow/config_similarity_measures/config.yaml
@@ -3,14 +3,14 @@
 # `null` will execut all methods
 # list of strings will execute selected methods
 method_list:
-    - pareg_ng
+    - pareg
 
 term_filter:
-    min_size: null
-    max_size: null
+    min_size: 50
+    max_size: 500
     sample_num: null
 
-replicate_count: 10
+replicate_count: 3
 
 parameters:
     similarityfactor: [0.5]
