Switch to future parallelization

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -53,8 +53,8 @@ Imports:
     stats,
     tidyr,
     purrr,
-    doParallel,
-    parallel,
+    future,
+    doFuture,
     foreach,
     tibble,
     glue,
