--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,7 +28,7 @@ importClassesFrom(DOSE,enrichResult)
 importFrom(Matrix,bdiag)
 importFrom(Matrix,forceSymmetric)
 importFrom(devtools,load_all)
-importFrom(doParallel,registerDoParallel)
+importFrom(doFuture,registerDoFuture)
 importFrom(dplyr,all_of)
 importFrom(dplyr,any_of)
 importFrom(dplyr,arrange)
@@ -56,6 +56,8 @@ importFrom(dplyr,ungroup)
 importFrom(dplyr,vars)
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
+importFrom(future,multisession)
+importFrom(future,plan)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,coord_fixed)
 importFrom(ggplot2,element_rect)
@@ -89,7 +91,6 @@ importFrom(magrittr,"%>%")
 importFrom(magrittr,extract2)
 importFrom(methods,new)
 importFrom(nloptr,bobyqa)
-importFrom(parallel,makeCluster)
 importFrom(progress,progress_bar)
 importFrom(proxy,simil)
 importFrom(purrr,pluck)
