--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,7 +56,7 @@ importFrom(dplyr,ungroup)
 importFrom(dplyr,vars)
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
-importFrom(future,multisession)
+importFrom(future,multicore)
 importFrom(future,plan)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,coord_fixed)
