Fix foreach::setDoPar import

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,6 +56,7 @@ importFrom(dplyr,ungroup)
 importFrom(dplyr,vars)
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
+importFrom(foreach,setDoPar)
 importFrom(future,multicore)
 importFrom(future,plan)
 importFrom(ggplot2,aes)
