Use doRNG::%dorng% instead of foreach::%dopar%

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ importFrom(Matrix,bdiag)
 importFrom(Matrix,forceSymmetric)
 importFrom(devtools,load_all)
 importFrom(doFuture,registerDoFuture)
+importFrom(doRNG,"%dorng%")
 importFrom(dplyr,all_of)
 importFrom(dplyr,any_of)
 importFrom(dplyr,arrange)
@@ -54,7 +55,6 @@ importFrom(dplyr,summarize)
 importFrom(dplyr,tally)
 importFrom(dplyr,ungroup)
 importFrom(dplyr,vars)
-importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
 importFrom(foreach,setDoPar)
 importFrom(future,multicore)
