Fix crash due to missing %dopar% import in doRNG

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,6 +55,7 @@ importFrom(dplyr,summarize)
 importFrom(dplyr,tally)
 importFrom(dplyr,ungroup)
 importFrom(dplyr,vars)
+importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
 importFrom(foreach,setDoPar)
 importFrom(future,multicore)
