Activate regularization effect benchmark

--- a/inst/scripts/synthetic_benchmark/resources/multi_config_workflow/workflow/Snakefile
+++ b/inst/scripts/synthetic_benchmark/resources/multi_config_workflow/workflow/Snakefile
@@ -125,7 +125,7 @@ rule all:
     input:
         # rules.dispersion_fitting_all.input,
         rules.response_distribution_all.input,
-        # rules.regularization_effect_all.input,
+        rules.regularization_effect_all.input,
         # rules.regularization_parameter_all.input,
         # expand(
         #     "results/regularization_parameter/rocauc_vs_loss/{params}/",
