--- a/inst/scripts/synthetic_benchmark/resources/multi_config_workflow/config_regularization_effect/config.yaml
+++ b/inst/scripts/synthetic_benchmark/resources/multi_config_workflow/config_regularization_effect/config.yaml
@@ -3,21 +3,21 @@
 # `null` will execut all methods
 # list of strings will execute selected methods
 method_list:
-    - pareg
+    - pareg_noterms
     - pareg_lasso
     - pareg_network
     - pareg_network_lasso
 
 term_filter:
-    min_size: null
-    max_size: null
+    min_size: 50
+    max_size: 500
     sample_num: null
 
-replicate_count: 10
+replicate_count: 3
 
 parameters:
     similarityfactor: [0.5]
-    ontermcount: [5]
-    siggenescaling: ["membercount"]
+    ontermcount: [20]
+    siggenescaling: [0.1]
 
 params_path: config_regularization_effect/params.csv
