--- a/NAMESPACE
+++ b/NAMESPACE
@@ -71,6 +71,7 @@ importFrom(ggraph,geom_edge_link)
 importFrom(ggraph,geom_node_point)
 importFrom(ggraph,ggraph)
 importFrom(ggraph,scale_edge_alpha)
+importFrom(ggrepel,geom_text_repel)
 importFrom(glue,glue)
 importFrom(glue,glue_collapse)
 importFrom(hms,as_hms)
@@ -96,7 +97,6 @@ importFrom(purrr,pluck)
 importFrom(purrr,transpose)
 importFrom(reticulate,"%as%")
 importFrom(rlang,.data)
-importFrom(shadowtext,geom_shadowtext)
 importFrom(stats,binomial)
 importFrom(stats,coef)
 importFrom(stats,cor)
