Switch to future parallelization (#12)
* Switch to future parallelization

* Use multicore instead of multisession

* Fix foreach::setDoPar import

* Use doRNG::%dorng% instead of foreach::%dopar%

* Fix crash due to missing %dopar% import in doRNG

* Replace remaining registerDoParallel calls with registerDoFuture

* Small fix

* Add parallelized CV test

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -55,9 +55,10 @@ Imports:
     stats,
     tidyr,
     purrr,
-    doParallel,
-    parallel,
+    future,
+    doFuture,
     foreach,
+    doRNG,
     tibble,
     glue,
     tidygraph,
