--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,7 +28,8 @@ importClassesFrom(DOSE,enrichResult)
 importFrom(Matrix,bdiag)
 importFrom(Matrix,forceSymmetric)
 importFrom(devtools,load_all)
-importFrom(doParallel,registerDoParallel)
+importFrom(doFuture,registerDoFuture)
+importFrom(doRNG,"%dorng%")
 importFrom(dplyr,all_of)
 importFrom(dplyr,any_of)
 importFrom(dplyr,arrange)
@@ -56,6 +57,9 @@ importFrom(dplyr,ungroup)
 importFrom(dplyr,vars)
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
+importFrom(foreach,setDoPar)
+importFrom(future,multicore)
+importFrom(future,plan)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,coord_fixed)
 importFrom(ggplot2,element_rect)
@@ -90,7 +94,6 @@ importFrom(magrittr,"%>%")
 importFrom(magrittr,extract2)
 importFrom(methods,new)
 importFrom(nloptr,bobyqa)
-importFrom(parallel,makeCluster)
 importFrom(progress,progress_bar)
 importFrom(proxy,simil)
 importFrom(purrr,pluck)
