--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,9 @@ export(transform_y)
 importClassesFrom(DOSE,enrichResult)
 importFrom(Matrix,bdiag)
 importFrom(Matrix,forceSymmetric)
+importFrom(basilisk,basiliskRun)
+importFrom(basilisk,basiliskStart)
+importFrom(basilisk,basiliskStop)
 importFrom(devtools,load_all)
 importFrom(doFuture,registerDoFuture)
 importFrom(doRNG,"%dorng%")
