Another test fix

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(generate_similarity_matrix)
 export(jaccard)
 export(overlap_coefficient)
 export(pareg)
+export(pareg_env)
 export(plot_pareg_with_args)
 export(similarity_sample)
 export(transform_y)
