--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,12 +21,16 @@ export(generate_similarity_matrix)
 export(jaccard)
 export(overlap_coefficient)
 export(pareg)
+export(pareg_env)
 export(plot_pareg_with_args)
 export(similarity_sample)
 export(transform_y)
 importClassesFrom(DOSE,enrichResult)
 importFrom(Matrix,bdiag)
 importFrom(Matrix,forceSymmetric)
+importFrom(basilisk,basiliskRun)
+importFrom(basilisk,basiliskStart)
+importFrom(basilisk,basiliskStop)
 importFrom(devtools,load_all)
 importFrom(doFuture,registerDoFuture)
 importFrom(doRNG,"%dorng%")
